--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -1,7 +1,17 @@
 ﻿[*.cs]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+insert_final_newline = true
+
+dotnet_sort_system_directives_first = true
 
 # SA1201: Elements should appear in the correct order
 dotnet_diagnostic.SA1201.severity = none
 
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = suggestion
+
+[*.xaml]
+indent_style = space
+indent_size = 4
